Fixed overflow issue, need refactoring on flipping card

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,4 @@
-mat-sidenav-container,
-mat-sidenav-content,
-mat-sidenav {
+mat-sidenav-container {
   height: 100%;
 }
 
