--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -1,6 +1,5 @@
 .layout-wrapper {
   height: 100vh;
-  margin: 0 16px;
 }
 
 .flex-wrapper {
