--- a/src/app/components/navigation/footer/footer.component.scss
+++ b/src/app/components/navigation/footer/footer.component.scss
@@ -10,7 +10,6 @@
   background: rgba(0, 0, 0, 0.62);
   height: 100%;
   right: $black-panel-offset-right;
-  box-sizing: content-box;
   width: $black-panel-width;
 }
 
