--- a/src/app/modules/how-we-work/how-we-work.component.scss
+++ b/src/app/modules/how-we-work/how-we-work.component.scss
@@ -17,16 +17,60 @@ h2 {
 }
 
 .card {
-  flex: 1 0 33%;
-  padding: 10px;
+  flex: 1 1 33%;
+  padding: 10px 20px;
 }
 
-.image {
-  width: 100%;
-  height: auto;
+.circle {
+  width: 400px;
+  height: 400px;
   border-radius: 50%;
+  perspective: 1000px;
+}
+
+.flip-card {
+  background-color: transparent;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 1.5s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  color: black;
+  transform: rotateY(180deg);
 }
 
 .full-height {
   height: 100%;
+}
+
+.yellow {
+  background-color: rgb(235, 224, 100);
+}
+
+.blue {
+  background-color: rgb(97, 206, 201);
+}
+
+.red {
+  background-color: rgb(212, 80, 67);
 }
